# Steam-Account-Manager

./: Cargo.toml  README.md  TESTING.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: accounts.rs  app.rs  core.rs  launch.rs  lib.rs  main.rs  password.rs  proxy.rs  register.rs  settings.rs  steam.rs  storage.rs  web.rs
tests/: full_suite.rs
