[package]
name = "steam-account-manager"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
steam-auth-rs = "0.1.2"
steam-totp-rs = "0.1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
keyvalues-parser = "0.2.4"
regex = "1"
url = "2"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
